2011-11-03  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: various minor tweakings, mostly related to AM_PROG_AR
	* tests/alloca.test: Adjust to new portability requirements due
	to the new AM_PROG_AR macro.
	* tests/discover.test: Likewise.
	* tests/libobj3.test: Likewise.
	* tests/pluseq7.test: Likewise.  Also, make grepping of automake
	expected error message stricter.
	* tests/stdlib.test: Likewise, and extend the test a bit.
	* tests/parse.test (configure.in): Remove redundant call to
	AC_PROG_RANLIB.
	* tests/library2.test: Adjust to new portability requirements
	due to the new AM_PROG_AR macro.  Also ...
	(configure.in): ... add call to AC_PROG_CC, to ensure automake
	really fails for the expected reason.

2011-11-03  Zack Weinberg <zackw@panix.com>  (tiny change)
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	maint-mode: fix botched configure messages
	This change fixes automake bug#9890.
	* m4/maintainer.m4 (AM_MAINTAINER_MODE): Fix the "checking ..."
	configure message related to the enabling/disabling of maintainer
	mode.
	* tests/help-maintainer.test: Renamed ...
	* tests/maintmode-configure-msg.test: ... to this, and extended
	to cover the fixed bug.  Also, since we are at it, make grepping
	of configure help screens stricter, and throw in some few other
	changes to reduce code duplication and enhance readability.
	* tests/Makefile.am (TESTS): Update.
	* THANKS: Update with Zack's new e-mail address.
	Report and initial patch by Zack Weinberg, test cases added by
	Stefano Lattarini.

2011-10-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	info: allow user to inhibit creation/update of '${infodir}/dir'
	With this change, we allow the user to request the install-info
	rules not to update the `${infodir}/dir' file, by exporting the
	environment variable `AM_UPDATE_INFO_DIR' to the value "no".
	This is especially useful to distro packagers, and is a definite
	improvement over our previous hack of looking whether the