@@ -1,3 +1,12 @@
+2011-11-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: extend tests on 'extra-portability' warning category
+	* tests/extra-portability.test: Redefine `$AUTOMAKE' to ensure we
+	have complete control over the automake options.  Extend by using
+	also a setup where no `portability' warning is present (only an
+	`extra-portability' warning is).  Other minor extensions.  Remove
+	some redundant, verbose comments about the expected diagnostic.
+
 2011-11-03  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: various minor tweakings, mostly related to AM_PROG_AR
